EMRI-827 Show proj decision data (#749)
* EMCRI# 827 Portal DEV (NTT): Can't view DFA provided data on submitted project
- Added new feilds to the project screen
- Adjusted mat label styles

* Portal DEV (NTT): Can't view DFA provided data on submitted project
- Added additional feilds to dynamics gateway layer, entities
- Updated shared models with new feilds
- Updated the mappings for new fields
- Generated FE services to get the new fields

* EMCRI # 827Portal DEV (NTT): Can't view DFA provided data on submitted project
- Updated the form controls and label styling to the project decision fields
- Adjusted the label styles
- Added the remainingLengthEMCRComments max length calculation on the emcr comments
- Added the new feilds to the dfa-project-main- models

* EMCRI # 827Portal DEV (NTT): Can't view DFA provided data on submitted project
- Updated new fields on  Entities , mappers
- Added new fields to the project review screen
- Updated recovert paln component and HTML

* Added projectDecision to recovery plan and display decision data

* missed console log

* missed old console log

* missed non nullable

* One of the needed lines for 827 was deleted

---------

Co-authored-by: shruthi-rapala <shruthi.rapala@quartech.com>

--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-project-main-forms/recovery-plan/recovery-plan.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-project-main-forms/recovery-plan/recovery-plan.component.html
@@ -31,7 +31,7 @@
         <div class="col-md-6"></div>
       </div>
       <br />
-      <ng-container *ngIf="projectDecision === 'Approved'">
+      <ng-container *ngIf="projectDecision === 'Approved' || projectDecision === 'Approved with Exclusions'">
         <mat-divider style="margin: 30px 0px;"/>
         <div>
         <div>
